--- a/GIFtastic.html
+++ b/GIFtastic.html
@@ -24,6 +24,8 @@
       <!-- Button triggers new button to be added -->
       <input id="add-new" type="submit" value="Add">
 
+      <input id="remove-new" type="submit value="Undo">
+
     </form>
 
     <div id="gifs-here"></div>
