--- a/GIFtastic.html
+++ b/GIFtastic.html
@@ -2,8 +2,7 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-   <title>The-Marvelous-Mood-Boost-Button-Machine
-</title>
+   <title>The-Marvelous-Mood-Boost-Button-Machine</title>
    <link rel="icon" type="image/png" href="assets/images/machine_icon.png">
    <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin" rel="stylesheet" type="text/css">
    <link href="https://fonts.googleapis.com/css?family=Codystar:300" rel="stylesheet">  
