--- a/GIFtastic.html
+++ b/GIFtastic.html
@@ -16,7 +16,7 @@
 
 <div class="container-fluid text-center">
   <div class="row">
-    <div class="col-sm-2" id="left"></div>
+    <div class="col-sm-2"></div>
       <div class="col-sm-8 text-center">
         <header>
           <article class="mask-rainbow">
