--- a/GIFtastic.html
+++ b/GIFtastic.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-<body>
+<body id="background" background="assets/images/black_pattern.png">
 
 <div class="container-fluid text-center">
   <div class="row">
